# raft-rs

./: .gitignore  Cargo.toml  README.md  Research.md  build.rs
src/: cli.rs  main.rs  network.rs  server.rs  state.rs
src/proto/: raft.capnp  raft.proto
src/raft/: client.rs  discovery.rs  mod.rs  network.rs  roles.rs  rpc.rs  server.rs  server_test.rs
