[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
capnpc = "0.10.2"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["compat"] }
futures = "0.3.0"
capnp = "0.12.1"
capnp-rpc = "0.12.0"
